# FactoryGame

./: .gitignore  Cargo.toml  README.md  codium.nix  flake.nix  index.html  profile.coz  result  rust-toolchain.toml  rustc-ice-2025-04-01T13_34_13-439297.txt  rustc-ice-2025-04-01T13_34_47-439413.txt  rustc-ice-2025-04-03T18_43_30-804861.txt  shell.nix  windows-xcompile.nix
.cargo/: config.toml
.github/workflows/: check.yml  clippy.yml  rustfmt.yml  tests.yml
addr2line-rs/: default.nix
crash_replays/: 001.rep  001.rep.ron  002.rep  002.rep.ron  003.rep  003.rep.ron  004.rep  004.rep.ron  005.rep  006.rep  007.rep  008.rep  009.rep  010.rep  011.rep  012.rep
proptest-regressions/: app_state.txt  chest.txt  mining_drill.txt  power.txt
proptest-regressions/belt/: deque.txt  smart.txt
proptest-regressions/belt/strict/: optimized.txt
proptest-regressions/frontend/action/: belt_placement.txt
proptest-regressions/frontend/world/: mod.txt  tile.txt
proptest-regressions/inserter/: bucket_bit_compressed.txt  mod.txt
proptest-regressions/mining_drill/: with_shared_ore.txt
proptest-regressions/rendering/: app_state.txt
proptest-regressions/test_world_harness/: mod.txt
src/: app_state.rs  assembler.rs  belt.rs  bot_system.rs  chest.rs  data.rs  egui_show_info.rs  get_size.rs  inserter.rs  item.rs  join_many.rs  lab.rs  lib.rs  main.rs  mining_drill.rs  mod_manager.rs  par_generation.rs  power.rs  producer.rs  progress_info.rs  research.rs  scenario.rs  shopping_list_arena.rs  small_box_slice.rs  specialized_storage.rs  split_arbitrary.rs  storage_list.rs  temp_vec.rs
src/assembler/: bucketed.rs  mod.rs  simd.rs
src/belt/: belt.rs  deque.rs  in_inserter.rs  inserter.rs  mod.rs  optimized.rs  out_inserter.rs  simple.rs  smart.rs  splitter.rs  sushi.rs
src/belt/strict/: belt.rs  in_inserter.rs  mod.rs  optimized.rs  out_inserter.rs
src/blueprint/: blueprint_string.rs  mod.rs
src/bucket_store/: const_reinsertion.rs  mod.rs
src/bucket_store/storage_storage_inserter_store/: mod.rs
src/canonical/: mod.rs
src/complex_inserter/: belt_to_sushi_chest.rs  inserter_update_coloring.rs  mod.rs
src/data/: factorio_1_1.fgmod  factorio_1_1.rs  mod.rs
src/data/pedia/: mod.rs
src/example_worlds/: mod.rs
src/frontend/: input.rs  mod.rs
src/frontend/action/: action_state_machine.rs  belt_placement.rs  mod.rs  place_entity.rs  place_tile.rs  set_recipe.rs
src/frontend/world/: mod.rs  sparse_grid.rs  tile.rs
src/frontend/world/sparse_grid/: bounding_box_grid.rs  dynamic.rs  map_grid.rs  mod.rs  perfect_grid.rs
src/inserter/: belt_belt_inserter.rs  belt_storage_inserter.rs  belt_storage_inserter_non_const_gen.rs  belt_storage_movement_list.rs  belt_storage_pure_buckets.rs  bucket_bit_compressed.rs  mod.rs  storage_storage_inserter.rs  storage_storage_with_buckets.rs  storage_storage_with_buckets_compressed.rs  storage_storage_with_buckets_indirect.rs
src/liquid/: connection_logic.rs  mod.rs
src/lockfile/: mod.rs
src/mining_drill/: mod.rs  only_solo_owned.rs  with_shared_ore.rs
src/multiplayer/: bad_tcp.rs  connection_reciever.rs  connection_reciever_tcp.rs  mod.rs  plumbing.rs  protocol.rs  server.rs
src/network_graph/: mod.rs
src/power/: grid_graph.rs  mod.rs  power_grid.rs
src/rendering/: app_state.rs  eframe_app.rs  map_view.rs  mod.rs  render_world.rs  window.rs
src/rendering/temp_assets/: .gitignore
src/rendering/temp_assets/krastorio/: README.md
src/replays/: mod.rs  replay_action.rs
src/saving/: loading.rs  mod.rs  save_file_settings.rs
src/statistics/: consumption.rs  mod.rs  power.rs  production.rs  recipe.rs  research.rs  time_usage.rs
src/test_world_harness/: assert.rs  mod.rs
state_space/: Cargo.toml
state_space/src/: lib.rs
test_blueprints/: .gitignore  60_iron_plate.bp  basic_factory.bp  copper_ore.bp  copper_plate.bp  eight_beacon_red_sci.bp  eight_beacon_red_sci_with_storage.bp  full_beacons.bp  gears.bp  huge_bad_purple.bp  iron_generation_test.bp  iron_ore.bp  iron_plate.bp  is_placeholder_fail.bp  lots_of_belts.bp  lots_of_belts_real.bp  purple_with_crap.bp  red_and_green.bp  red_and_green_with_clocking.bp  red_sci.bp  red_sci_ings_bp  red_sci_with_beacons.bp  red_sci_with_beacons_and_belts.bp  saved_binary.bp  single_steel.bp  solar_farm.bp  solar_tile.bp  test.bp
test_blueprints/murphy/: accumulators.bp  adv_oil.bp  blue.bp  blue_40k.bp  blue_chips_rocket.bp  blue_chips_science.bp  double_repeat.bp  full_lds.bp  green.bp  green_40k.bp  labs.bp  labs_40k.bp  lds.bp  megabase.bp  megabase_fixes_no_clocking.bp  megabase_new_blueprint_format.bp  megabase_notes.md  megabase_running.bp  megabase_with_belt_sorting.bp  megabase_with_merged_blue_purple.bp  megabase_with_sushi_sorting.bp  prod_mod.bp  purple.bp  purple_10k_no_steel.bp  purple_40k.bp  purple_40k_no_steel.bp  purple_40k_with_furnace_steel.bp  purple_with_prod.bp  rcu.bp  rcu_full.bp  red.bp  red_40k.bp  red_chips.bp  repeat_factory.bp  rgb_running.bp  rgbp_running.bp  robot_frame.bp  rocket_fuel.bp  silo.bp  small_yellow.bp  (+4 more)
tested_ideas/: assembler_waitlist.md  belt_inserter_list.md  belt_lazy_update.md  parallel_base_generation.md  responsive_assemblers.md  statistics.md  storage_list_statics_at_zero.md
tests/: test.rs  visual_replay_tests.rs  visual_test.rs
