# cargo-features = ["codegen-backend"]
[package]
name = "factory"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
build = "build.rs"


[dependencies]
enum-map = { version = "2.7.3", features = ["serde"] }
tilelib = { git = "https://github.com/BloodStainedCrow/tilelib.git", optional = true }
spin_sleep_util = "0.1.1"
image = { version = "0.25.9", optional = true }
log = "0.4.29"
simple_logger = {version = "5.0.0", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"], default-features = false }
directories = "6.0.0"
ron = "0.8.1"
take_mut = "0.2.2"
static_assertions = "1.1.0"
itertools = "0.14.0"
genawaiter = "0.99.1"
petgraph = { version = "0.8.2", features = ["rayon", "serde", "serde-1", "serde_derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
postcard = { version = "1.1.1", features = ["use-std"] }
charts-rs = { version = "0.3.27", features = ["resvg"] }
strum = { version = "0.27.1", features = ["derive"] }
bitvec = { version = "1.0.1", features = ["alloc", "serde", "std"], default-features = false }
bimap = { version = "0.6.3", features = ["serde", "std"], default-features = false }
eframe = { version = "0.31.1", features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "x11", "wgpu"], optional = true, default-features = false  }
wgpu = { version = "25.0.2", features = ["webgl"] }
egui_extras = { version = "0.31.1", optional = true }
egui_plot = { version = "0.32.1", optional = true }
rand = "0.8.5"
bitcode = { version = "0.6.9", features = ["serde"] }
egui = { version = "0.31.1", features = ["bytemuck", "serde"], optional = true }
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
rstest = "0.25.0"
parking_lot = { version = "0.12.3", features = ["serde", "deadlock_detection"] }
profiling = { version = "1.0.16" }
puffin_egui = { version = "0.29", optional = true }
puffin = { version = "0.19", features = ["web"] }
dhat = "0.3.3"
noise = { version = "0.9.0", features = ["std"] }
rfd = { version = "0.15.3", optional = true }
egui_graphs = { version = "0.25.1", optional = true }
serde_path_to_error = "0.1.17"
get-size2 = { version = "0.7.3", features = ["derive"], optional = true }

egui-show-info = { git = "https://github.com/BloodStainedCrow/egui-show-info", features = ["petgraph", "parking_lot", "enum-map", "bimap"], optional = true }
egui-show-info-derive = { git = "https://github.com/BloodStainedCrow/egui-show-info", optional = true }
bytemuck = "1.23.1"
# ph = "0.9.6"
memoffset = "0.9.1"
smallvec = { version = "1.15.1", features = ["serde"] }

ecolor = { version = "0.31.1", features = ["color-hex"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
getrandom_old = { version = "0.2.16", features = ["js"], package = "getrandom" }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.56"
wasm-timer = "0.2.5"
bincode = { version = "2.0.1", features = ["serde"] }
thin-dst = "1.1.0"
stable-vec = "0.4.1"
recycle_vec = "1.1.2"
fork = "0.3.0"
libc = { version = "0.2.178", default-features = false }
interprocess = "2.2.3"
fixed-buffer = "1.0.2"
base64 = "0.22.1"
mimalloc = { version = "0.1.48", features = ["v3"] }
rustc-hash = "2.1.1"

[build-dependencies]
built = {version = "0.8", features= ["git2", "chrono"]}

[dev-dependencies]
winit = "0.30.12"
proptest = "1.4.0"

[patch.crates-io]
puffin_egui = { git = "https://github.com/BloodStainedCrow/puffin" }
puffin = { git = "https://github.com/BloodStainedCrow/puffin" }
egui = { git = "https://github.com/BloodStainedCrow/egui", rev = "4e11a02" }
eframe = { git = "https://github.com/BloodStainedCrow/egui", rev = "4e11a02" }
ecolor = { git = "https://github.com/BloodStainedCrow/egui", rev = "4e11a02" }
egui-wgpu = { git = "https://github.com/BloodStainedCrow/egui", rev = "4e11a02" }
egui_graphs = { git = "https://github.com/BloodStainedCrow/egui_graphs", branch = "tree_layout" }
petgraph = { git = "https://github.com/BloodStainedCrow/petgraph", branch = "stable_graph_node_weights_mut_indexed" }

[lints.rust]

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = "deny"
nursery = "deny"
unwrap_used = { level = "deny", priority = -1 }
wildcard_enum_match_arm = { level = "deny", priority = -1 }
match_same_arms = { level = "deny", priority = -1 }


redundant_closure_for_method_calls = { level = "allow", priority = 1 }
suboptimal_flops = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
# lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false

[profile.release-with-debug-asserts]
inherits = "release"
debug-assertions = true

[profile.fast-compile]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
# lto = true
# codegen-units = 1

[features]
default = ["profiler", "graphics", "client", "logging"]
# Use Krastorio2 graphics. Since I have not properly added licensing information, I currently do not push them, therefore this feature is broken
graphics = []
# dhat-rs memory profiling (https://docs.rs/dhat/latest/dhat/)
dhat-heap = []
profiler = ["profiling/profile-with-puffin"]
client = [ "dep:eframe", "dep:egui", "dep:egui_extras", "dep:egui_plot", "dep:puffin_egui", "dep:egui_graphs", "dep:egui-show-info", "dep:egui-show-info-derive", "dep:tilelib", "dep:image", "dep:rfd", "dep:get-size2"]
logging = ["simple_logger"]
