# cargo-features = ["codegen-backend"]
[package]
name = "factory"
version = "0.2.1"
edition = "2024"
build = "build.rs"


[dependencies]
enum-map = { version = "2.7.3", features = ["serde"] }
tilelib = { git = "https://github.com/BloodStainedCrow/tilelib.git", optional = true }
spin_sleep_util = "0.1.1"
image = { version = "0.25.5", optional = true }
log = "0.4.25"
simple_logger = {version = "5.0.0", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
directories = "6.0.0"
ron = "0.8.1"
take_mut = "0.2.2"
static_assertions = "1.1.0"
itertools = "0.14.0"
petgraph = { version = "0.8.2", features = ["rayon", "serde", "serde-1", "serde_derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
postcard = { version = "1.1.1", features = ["use-std"] }
strum = { version = "0.27.1", features = ["derive"] }
# explicitly disable atomic feature, so that bitvecs do not use atomic instructions. very important for performance!
bitvec = { version = "1.0.1", features = ["alloc", "serde", "std"], default-features = false }
bimap = { version = "0.6.3", features = ["serde", "std"], default-features = false }
eframe = { version = "0.32", features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "x11", "wgpu"], optional = true, default-features = false  }
wgpu = { version = "25.0.2", features = ["webgl"] }
egui_extras = { version = "0.32", optional = true }
egui_plot = { version = "0.33", optional = true }
rand = "0.9.0"
bitcode = { version = "0.6.6", features = ["serde"] }
egui = { version = "0.32", features = ["bytemuck", "serde"], optional = true }
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
parking_lot = { version = "0.12.3", features = ["serde"] }
profiling = { version = "1.0.16" }
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin", optional = true }
puffin = { git = "https://github.com/EmbarkStudios/puffin", features = ["web"] }
dhat = {version = "0.3.3", optional = true }
noise = { version = "0.9.0", features = ["std"] }
rfd = { version = "0.17", optional = true }
egui_graphs = { version = "0.28", optional = true }
serde_path_to_error = "0.1.17"
get-size2 = { version = "0.7.1", features = ["derive"], optional = true }

egui-show-info = { git = "https://github.com/BloodStainedCrow/egui-show-info", features = ["petgraph", "parking_lot", "enum-map", "bimap"], optional = true }
egui-show-info-derive = { git = "https://github.com/BloodStainedCrow/egui-show-info", optional = true }
bytemuck = "1.23.1"
memoffset = "0.9.1"

ecolor = { version = "0.32", features = ["color-hex"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
wasm-timer = "0.2.5"
bincode = { version = "2.0.1", features = ["serde"] }
thin-dst = "1.1.0"
recycle_vec = "1.1.2"
base64 = "0.22.1"
mimalloc = { version = "0.1.48", features = ["v3"] }
rustc-hash = "2.1.1"
chrono = { version = "0.4.42", features = ["serde"] }
rand_xoshiro = "0.7.0"
url = "2.5.7"
args = "2.2.0"
console_error_panic_hook = "0.1.7"
fixedbitset = "0.5.7"
convert_case = "0.11.0"

# These are all the dependencies which do not work on wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = { version = "0.2.177", default-features = false }
interprocess = { version = "2.2.3" }
fork = "0.3.0"
open = "5.3.3"

[build-dependencies]
built = {version = "0.8", features= ["git2", "chrono"]}

[dev-dependencies]
winit = "0.30.12"
proptest = "1.4.0"
rstest = "0.25.0"

[patch.crates-io]
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin", optional = true }
puffin = { git = "https://github.com/EmbarkStudios/puffin" }
egui_graphs = { git = "https://github.com/BloodStainedCrow/egui_graphs", branch = "tree_layout" }
petgraph = { git = "https://github.com/BloodStainedCrow/petgraph", branch = "stable_graph_node_weights_mut_indexed" }

[lints.rust]

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = "deny"
nursery = "deny"
unwrap_used = { level = "deny", priority = -1 }
wildcard_enum_match_arm = { level = "deny", priority = -1 }
match_same_arms = { level = "deny", priority = -1 }


redundant_closure_for_method_calls = { level = "allow", priority = 1 }
suboptimal_flops = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false

[profile.release-with-debug-asserts]
inherits = "release"
debug-assertions = true

[profile.fast-compile]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
# lto = true
# codegen-units = 1

[features]
default = ["profiler", "graphics", "client", "logging", "replay"]
# Use Krastorio2 graphics.
graphics = []
# dhat-rs memory profiling (https://docs.rs/dhat/latest/dhat/)
dhat-heap = [ "dhat" ]
profiler = ["profiling/profile-with-puffin"]
client = [ "dep:eframe", "dep:egui", "dep:egui_extras", "dep:egui_plot", "dep:puffin_egui", "dep:egui_graphs", "dep:egui-show-info", "dep:egui-show-info-derive", "dep:tilelib", "dep:image", "dep:rfd", "dep:get-size2"]
logging = ["simple_logger"]
debug-stat-gathering = []
assembler-craft-tracking = []
replay = []
